--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YAPLAYER - Authentification</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
     <div class="auth-container" id="auth-container">
@@ -17,7 +19,9 @@
             <label for="input-password">Mot de passe :</label>
             <div class="password-container">
                 <input type="password" id="input-password">
-                <span class="toggle-password" onclick="togglePasswordVisibility()">👁️</span>
+                <span class="toggle-password" onclick="togglePasswordVisibility()">
+    <i class="far fa-eye"></i>
+</span>
             </div>
         </div>
         <button id="login-btn">Se connecter</button>
@@ -30,6 +34,9 @@
         </div>
         
         <div class="existing-playlists" id="existing-playlists">
+    <h3><i class="fas fa-list"></i> Vos playlists</h3>
+    <div id="playlists-list"></div>
+</div>
             <!-- Les playlists existantes seront ajoutées ici dynamiquement -->
         </div>
         
