--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             <label for="input-password">Mot de passe :</label>
             <div class="password-container">
                 <input type="password" id="input-password">
-                <span class="toggle-password" onclick="togglePasswordVisibility()">
-    <i class="far fa-eye"></i>
+                <span class="toggle-password" onclick="togglePasswordVisibility()" title="Afficher/Masquer le mot de passe">
+    <i class="far fa-eye" id="eye-icon"></i>
 </span>
             </div>
         </div>
