--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
         <div class="form-group">
             <label for="input-password">Mot de passe :</label>
             <div class="password-container">
-                <input type="password" id="input-password">
-                <span class="toggle-password" onclick="togglePasswordVisibility()" title="Afficher/Masquer le mot de passe">
-    <i class="far fa-eye" id="eye-icon"></i>
-</span>
-            </div>
+    <input type="password" id="input-password" placeholder="Votre mot de passe">
+    <span class="toggle-password" id="toggle-password-btn">
+        <i class="far fa-eye" id="eye-icon"></i>
+    </span>
+</div>
         </div>
         <button id="login-btn">Se connecter</button>
     </div>
