--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>YAPLAYER - Authentification & Abonnement</title>
+  <title>YAPLAYER - Authentification & Playlists</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -26,17 +26,14 @@
 
   <!-- Manager -->
   <div class="playlist-container" id="playlist-container" style="display:none;">
-    <h1>Gestion de playlist & Abonnement</h1>
-
+    <h1>Gestion de playlists</h1>
     <div class="client-info">
       <p>MAC: <span id="display-mac"></span></p>
-      <p>Status app: <strong id="display-status">—</strong></p>
-      <p>Expire le: <span id="display-expiry">—</span></p>
     </div>
 
     <div class="existing-playlists" id="existing-playlists">
       <h3>Vos playlists</h3>
-      <!-- Liste dynamique -->
+      <!-- cartes dynamiques -->
     </div>
 
     <div class="form-group">
@@ -47,28 +44,12 @@
       <label for="playlist-url">URL Playlist M3U :</label>
       <input type="url" id="playlist-url" placeholder="https://exemple.com/playlist.m3u">
     </div>
-    <button id="save-btn">Enregistrer la playlist</button>
-
-    <hr/>
-
-    <h2>Abonnement</h2>
-    <div class="form-group">
-      <label for="sub-plan">Plan :</label>
-      <select id="sub-plan">
-        <option value="TRIAL">TRIAL (15 jours)</option>
-        <option value="YEARLY">YEARLY (365 jours)</option>
-        <option value="LIFETIME">LIFETIME</option>
-      </select>
-    </div>
-
-    <!-- Pas de saisie de date : calcul automatique -->
-    <button id="save-subscription-btn">Enregistrer l’abonnement</button>
+    <button id="save-btn">Enregistrer</button>
   </div>
 
   <!-- Firebase -->
   <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-database-compat.js"></script>
-
   <!-- App -->
   <script src="script.js"></script>
 </body>
